docs/api/qiskit/0.19/qiskit.transpiler.passes.NumTensorFactors.mdx
---
title: NumTensorFactors (v0.19)
description: API reference for qiskit.transpiler.passes.NumTensorFactors in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.NumTensorFactors
---

# NumTensorFactors

<Class id="qiskit.transpiler.passes.NumTensorFactors" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/passes/analysis/num_tensor_factors.py" signature="NumTensorFactors(*args, **kwargs)" modifiers="class">
  Calculate the number of tensor factors of a DAG circuit.

  The result is saved in `property_set['num_tensor_factors']` as an integer.

  ## Attributes

  <span id="numtensorfactors-is-analysis-pass" />

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.NumTensorFactors.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  <span id="numtensorfactors-is-transformation-pass" />

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.NumTensorFactors.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  <span id="numtensorfactors-name" />

  ### name

  <Function id="qiskit.transpiler.passes.NumTensorFactors.name" signature="NumTensorFactors.name()">
    Return the name of the pass.
  </Function>

  <span id="numtensorfactors-run" />

  ### run

  <Function id="qiskit.transpiler.passes.NumTensorFactors.run" signature="NumTensorFactors.run(dag)">
    Run the NumTensorFactors pass on dag.
  </Function>
</Class>

