docs/api/qiskit/0.24/qiskit.transpiler.passes.NumTensorFactors.mdx
---
title: NumTensorFactors
description: API reference for qiskit.transpiler.passes.NumTensorFactors
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.NumTensorFactors
---

<span id="qiskit-transpiler-passes-numtensorfactors" />

# qiskit.transpiler.passes.NumTensorFactors

<Class id="qiskit.transpiler.passes.NumTensorFactors" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/transpiler/passes/analysis/num_tensor_factors.py" signature="NumTensorFactors(*args, **kwargs)">
  Calculate the number of tensor factors of a DAG circuit.

  The result is saved in `property_set['num_tensor_factors']` as an integer.

  ### \_\_init\_\_

  <Function id="qiskit.transpiler.passes.NumTensorFactors.__init__" name="__init__" signature="__init__()">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                          |                                       |
  | ------------------------------------------------------------------------------------------------------------------------ | ------------------------------------- |
  | [`__init__`](#qiskit.transpiler.passes.NumTensorFactors.__init__ "qiskit.transpiler.passes.NumTensorFactors.__init__")() | Initialize self.                      |
  | [`name`](#qiskit.transpiler.passes.NumTensorFactors.name "qiskit.transpiler.passes.NumTensorFactors.name")()             | Return the name of the pass.          |
  | [`run`](#qiskit.transpiler.passes.NumTensorFactors.run "qiskit.transpiler.passes.NumTensorFactors.run")(dag)             | Run the NumTensorFactors pass on dag. |

  ## Attributes

  |                                                                                                                                                                  |                                             |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------- |
  | [`is_analysis_pass`](#qiskit.transpiler.passes.NumTensorFactors.is_analysis_pass "qiskit.transpiler.passes.NumTensorFactors.is_analysis_pass")                   | Check if the pass is an analysis pass.      |
  | [`is_transformation_pass`](#qiskit.transpiler.passes.NumTensorFactors.is_transformation_pass "qiskit.transpiler.passes.NumTensorFactors.is_transformation_pass") | Check if the pass is a transformation pass. |

  ### is\_analysis\_pass

  <Function id="qiskit.transpiler.passes.NumTensorFactors.is_analysis_pass" name="is_analysis_pass" signature="property is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Function>

  ### is\_transformation\_pass

  <Function id="qiskit.transpiler.passes.NumTensorFactors.is_transformation_pass" name="is_transformation_pass" signature="property is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Function>

  ### name

  <Function id="qiskit.transpiler.passes.NumTensorFactors.name" name="name" signature="name()">
    Return the name of the pass.
  </Function>

  ### run

  <Function id="qiskit.transpiler.passes.NumTensorFactors.run" name="run" signature="run(dag)">
    Run the NumTensorFactors pass on dag.
  </Function>
</Class>

